# ar1s_launcher

./: 1.7.10-Forge_10.13.4.1614.json  README.md  index.html  package-lock.json  package.json  test.json  tsconfig.json  vite.config.ts
Ar1s_Launcher/: README.md  TODO.md  package.json
Ar1s_Launcher/src/: App.vue  main.ts
Ar1s_Launcher/src-tauri/: Cargo.toml  tauri.conf.json
Ar1s_Launcher/src-tauri/src/: auth.rs  config.rs  download.rs  java.rs  launcher.rs  lib.rs  main.rs  models.rs
Ar1s_Launcher/src/components/: GlobalDownloadStatus.vue  GlobalGameStatus.vue  NotificationDownload.vue
Ar1s_Launcher/src/stores/: downloadStore.ts  launcherStore.ts
Ar1s_Launcher/src/views/: DownloadView.vue  SettingsView.vue
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/controllers/: auth_controller.rs  config_controller.rs  download_controller.rs  forge_controller.rs  instance_controller.rs  java_controller.rs  launcher_controller.rs  loader_controller.rs  mod.rs  modpack_controller.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: mod.rs  modpack.rs
src-tauri/src/services/: auth.rs  config.rs  download.rs  file_verification.rs  forge.rs  http_client.rs  instance.rs  java.rs  launcher.rs  memory.rs  mod.rs  modpack_installer.rs  modrinth.rs
src-tauri/src/services/download/: batch.rs  file.rs  http.rs  manifest.rs  mod.rs  state.rs  version.rs
src-tauri/src/services/launcher/: arguments.rs  classpath.rs  isolation.rs  java.rs  mod.rs  natives.rs  process.rs  version_json.rs
src-tauri/src/services/loaders/: fabric.rs  forge.rs  mod.rs  neoforge.rs  quilt.rs
src-tauri/src/utils/: file_utils.rs  logger.rs
src/components/: GlobalNotification.vue  NotificationDownload.vue
src/components/add-instance/: CustomInstallForm.vue  ModpackCard.vue  ModrinthBrowser.vue
src/components/home/: GameSettingsCard.vue  LaunchCard.vue  QuickNavCard.vue  VersionSelector.vue
src/components/instance/: InstanceCard.vue
src/components/settings/: GeneralSettings.vue  JavaSettings.vue  MemorySettings.vue  WindowSettings.vue
src/composables/: useDebounce.ts  useEventSubscription.ts  useGameLaunch.ts  useInstanceCreation.ts  useModrinth.ts  useVersionManager.ts
src/plugins/: vuetify.ts
src/router/: index.ts
src/services/: api.ts  cache.ts  index.ts
src/stores/: downloadStore.ts  launcherStore.ts  notificationStore.ts  settings.ts
src/types/: events.ts
src/utils/: format.ts
src/views/: AddInstanceView.vue  DownloadView.vue  HomeView.vue  InstallModpackView.vue  InstanceManagerView.vue  SettingsView.vue
(+11 files in other folders)
