[package]
name = "ar1s_launcher"
version = "0.1.0"
description = "Ar1s Launcher - Minecraft启动器"
authors = ["jdbEwl"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ar1s_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
winres = "0.1"

[dependencies]
md-5 = "0.10"
uuid = { version = "1.4", features = ["v3", "v4", "v5", "md5"] }
digest = "0.10"
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
zip = "0.6"
thiserror = "1"
log = "0.4"
fern = "0.6"
chrono = { version = "0.4", features = ["serde"] }
directories = "4"
lazy_static = "1"
regex = "1"
sysinfo = "0.30.13"

