[package]
name = "ar1s_launcher"
version = "0.1.0"
description = "Ar1s Launcher - Minecraft启动器"
authors = ["jdbEwl"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ar1s_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
uuid = { version = "1.19", features = ["v3"] }
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.4"
tauri-plugin-http = "2.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tokio = { version = "1", features = ["full"] }
zip = "7.0"
thiserror = "2"
log = "0.4"
fern = "0.7"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"
regex = "1.12"
sysinfo = "0.37"
opener = "0.8"
rayon = "1.10"

